--- a/nbs/00_pipeline.ipynb
+++ b/nbs/00_pipeline.ipynb
@@ -38,7 +38,7 @@
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils.all import *\n",
-    "from counternet.counternet_training import *"
+    "from counternet.training_module import *"
    ]
   },
   {
@@ -146,6 +146,17 @@
     "        self.model = load_trained_model(\n",
     "            self.model, checkpoint_path=checkpoint_path, gpus=gpus)\n",
     "        return self.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_config = load_json('assets/configs/trainer.json')\n",
+    "m_config = load_json('assets/configs/adult.json')\n",
+    "# model = "
    ]
   },
   {
