--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp counternet_training"
+    "# default_exp training_module"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils.all import *\n",
-    "from counternet.evaluation import SensitivityMetric\n",
+    "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
     "\n",
     "\n",
     "pl_logger = logging.getLogger('lightning')"
@@ -53,8 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pl version: 1.3.5\n",
-      "torch version: 1.8.0\n"
+      "pl version: 1.3.5\ntorch version: 1.8.0\n"
      ]
     }
    ],
@@ -72,8 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 768 ms, sys: 151 ms, total: 919 ms\n",
-      "Wall time: 915 ms\n"
+      "CPU times: user 774 ms, sys: 29.5 ms, total: 803 ms\nWall time: 802 ms\n"
      ]
     }
    ],
@@ -88,6 +86,13 @@
    "metadata": {},
    "source": [
     "## Utils"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalize the categorical elements "
    ]
   },
   {
@@ -115,6 +120,13 @@
     "                x[:, cat_idx: cat_end_idx] = F.softmax(x[:, cat_idx: cat_end_idx].clone().detach(), dim=-1)\n",
     "            cat_idx = cat_end_idx\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Metrics"
    ]
   },
   {
@@ -151,7 +163,7 @@
     "        self.diffs += (torch.round(c_y) != torch.round(c_y_hat)).sum()\n",
     "\n",
     "    def compute(self):\n",
-    "        return 1 - self.diffs / self.total_n_changes, self.diffs, self.total_n_changes"
+    "        return 1 - self.diffs / self.total_n_changes"
    ]
   },
   {
@@ -173,7 +185,9 @@
     "\n",
     "sensitivity = SensitivityMetric(predict_fn=pred_func, scaler=scaler, cat_idx=4, threshold=1.)\n",
     "sensitivity.update(scaler.transform(x), scaler.transform(c), c_y)\n",
-    "score, diffs, total_n_changes = sensitivity.compute()\n",
+    "score = sensitivity.compute()\n",
+    "diffs = sensitivity.diffs\n",
+    "total_n_changes = sensitivity.total_n_changes\n",
     "\n",
     "assert torch.equal(score, torch.tensor(0.))\n",
     "assert torch.equal(diffs, torch.tensor(5))\n",
@@ -196,11 +210,114 @@
     "\n",
     "sensitivity = SensitivityMetric(predict_fn=pred_func, scaler=scaler, cat_idx=4, threshold=1.)\n",
     "sensitivity.update(scaler.transform(x), scaler.transform(c), c_y)\n",
-    "score, diffs, total_n_changes = sensitivity.compute()\n",
+    "score = sensitivity.compute()\n",
+    "diffs = sensitivity.diffs\n",
+    "total_n_changes = sensitivity.total_n_changes\n",
     "\n",
     "assert torch.equal(score, torch.tensor(0.))\n",
     "assert torch.equal(diffs, torch.tensor(10))\n",
     "assert torch.equal(total_n_changes, torch.tensor(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export evaluation\n",
+    "def proximity(x:torch.Tensor, c: torch.Tensor):\n",
+    "    return torch.abs(x - c).sum(dim=-1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor([1, 2, 1])\n",
+    "c = torch.tensor([-1, 1., 0.1])\n",
+    "assert proximity(x, c) == torch.tensor(3.9)\n",
+    "\n",
+    "x_ = torch.tensor([1.5, 2.5, 1])\n",
+    "c_ = torch.tensor([-0.5, 1.5, 0.1])\n",
+    "assert proximity(x, c) == torch.tensor(3.9)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor([[1, 2, 1], [-1, 1., 0.1]])\n",
+    "c = torch.tensor([[-1, 1., 0.1], [1, 2, 1]])\n",
+    "assert proximity(x, c) == torch.tensor(3.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export evaluation\n",
+    "class ProximityMetric(Metric):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(dist_sync_on_step=False)\n",
+    "        self.add_state(\"dist\", default=torch.tensor(0.), dist_reduce_fx=\"sum\")\n",
+    "        self.add_state(\"n\", default=torch.tensor(0.), dist_reduce_fx=\"sum\")\n",
+    "\n",
+    "    def update(self, x, c):\n",
+    "        self.dist += proximity(x, c)\n",
+    "        self.n += 1\n",
+    "\n",
+    "    def compute(self):\n",
+    "        if self.n == 0:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return self.dist / self.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric = ProximityMetric()\n",
+    "x = torch.tensor([1, 2, 1])\n",
+    "c = torch.tensor([-1, 1., 0.1])\n",
+    "\n",
+    "metric.update(x, c)\n",
+    "assert metric.compute() == torch.tensor(3.9)\n",
+    "\n",
+    "x_ = torch.tensor([1.5, 2.5, 1])\n",
+    "c_ = torch.tensor([-0.5, 1.5, 0.1])\n",
+    "metric.update(x_, c_)\n",
+    "assert metric.compute() == torch.tensor(3.9)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric = ProximityMetric()\n",
+    "x = torch.tensor([[1, 2, 1], [-1, 1., 0.1]])\n",
+    "c = torch.tensor([[-1, 1., 0.1], [1, 2, 1]])\n",
+    "metric.update(x, c)\n",
+    "\n",
+    "assert metric.compute() == torch.tensor(3.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define other utility functions for training"
    ]
   },
   {
@@ -224,8 +341,7 @@
     "    assert f_name in _loss_functions.keys(), \\\n",
     "        f'function name `{f_name}` is not in the loss function list {_loss_functions.keys()}'\n",
     "\n",
-    "    return _loss_functions[f_name]\n",
-    "\n"
+    "    return _loss_functions[f_name]\n"
    ]
   },
   {
@@ -299,9 +415,10 @@
     "        self.discret_cols = configs['discret_cols']\n",
     "        self.__check_cols()\n",
     "\n",
-    "        # set configss\n",
+    "        # set training configs\n",
     "        self.lr = configs['lr']\n",
     "        self.batch_size = configs['batch_size']\n",
+    "        self.dropout = configs['dropout'] if 'dropout' in configs.keys() else 0.3\n",
     "        self.lambda_1 = configs['lambda_1'] if 'lambda_1' in configs.keys() else 1\n",
     "        self.lambda_2 = configs['lambda_2'] if 'lambda_2' in configs.keys() else 1\n",
     "        self.lambda_3 = configs['lambda_3'] if 'lambda_3' in configs.keys() else 1\n",
@@ -317,9 +434,6 @@
     "        self.enc_dims = configs['encoder_dims'] if 'encoder_dims' in configs.keys() else []\n",
     "        self.dec_dims = configs['decoder_dims'] if 'decoder_dims' in configs.keys() else []\n",
     "        self.exp_dims = configs['explainer_dims'] if 'explainer_dims' in configs.keys() else []\n",
-    "\n",
-    "        # metrics\n",
-    "        self.accuracy = Accuracy()\n",
     "\n",
     "        # log graph\n",
     "        self.example_input_array = torch.randn((1, self.enc_dims[0]))\n",
@@ -390,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# export utils.functional\n",
     "def uniform(shape: tuple, r1: float, r2: float, device=None):\n",
     "    assert r1 < r2, f\"Issue: r1 ({r1}) >= r2 ({r2})\"\n",
     "    return (r2 - r1) * torch.rand(*shape, device=device) + r1\n",
@@ -406,35 +520,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of counternet.utils.processing failed: Traceback (most recent call last):\n",
-      "  File \"/home/birk/software/miniconda3/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/birk/software/miniconda3/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/home/birk/software/miniconda3/lib/python3.8/imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"/home/birk/software/miniconda3/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 783, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"../counternet/utils/processing.py\", line 81, in <module>\n",
-      "    class OneHotEncoder(object):\n",
-      "  File \"../counternet/utils/processing.py\", line 82, in OneHotEncoder\n",
-      "    self.categories_ = []\n",
-      "NameError: name 'self' is not defined\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
-    "class PredictionTrainingModule(BaseModule):\n",
+    "class PredictiveTrainingModule(BaseModule):\n",
+    "    def __init__(self, configs: Dict[str, Any]):\n",
+    "        super().__init__(configs)\n",
+    "        # define metrics\n",
+    "        self.val_acc = Accuracy()\n",
+    "\n",
     "    def forward(self, *x):\n",
     "        return self.model_forward(x)\n",
     "\n",
@@ -455,10 +549,9 @@
     "        if self.smooth_y:\n",
     "            y = smooth_y(y)\n",
     "        loss = F.binary_cross_entropy(y_hat, y)\n",
-    "        score = self.accuracy(y_hat, y)\n",
+    "\n",
     "        # Logging to TensorBoard\n",
     "        self.log('train/train_loss_1', loss, on_step=False, on_epoch=True, prog_bar=False, logger=True)\n",
-    "        self.log('train/pred_accuracy', score, on_step=False, on_epoch=True, prog_bar=False, logger=True, sync_dist=True)\n",
     "\n",
     "        return loss\n",
     "\n",
@@ -469,9 +562,135 @@
     "        y_hat = self(*x)\n",
     "        # loss\n",
     "        loss = F.binary_cross_entropy(y_hat, y)\n",
-    "        score = self.accuracy(torch.round(y_hat), torch.round(y))\n",
+    "        self.accuracy(y_hat, y)\n",
     "        self.log('val/val_loss_1', loss, on_step=False, on_epoch=True, prog_bar=False, logger=True)\n",
-    "        self.log('val/pred_accuracy', score, on_step=False, on_epoch=True, prog_bar=False, logger=True, sync_dist=True)"
+    "        self.log('val/pred_accuracy', self.accuracy, on_step=False, on_epoch=True, prog_bar=False, logger=True, sync_dist=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CounterNet Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "class CFNetTrainingModule(BaseModule):\n",
+    "    def __init__(self, configs: Dict[str, Any]):\n",
+    "        super().__init__(configs)\n",
+    "        # define metrics\n",
+    "        self.pred_acc = Accuracy()\n",
+    "        self.cf_acc = Accuracy()\n",
+    "        self.proximity = ProximityMetric()\n",
+    "\n",
+    "    def forward(self, x, hard: bool=False):\n",
+    "        \"\"\"hard: categorical features in counterfactual is one-hot-encoding or not\"\"\"\n",
+    "        y, c = self.model_forward(x)\n",
+    "        c = self.cat_normalize(c, hard=hard)\n",
+    "        return y, c\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        \"\"\"x has not been preprocessed\"\"\"\n",
+    "        self.freeze()\n",
+    "        y_hat, c = self.model_forward(x)\n",
+    "        return torch.round(y_hat)\n",
+    "\n",
+    "    def generate_cf(self, x, clamp=False):\n",
+    "        self.freeze()\n",
+    "        y, c = self.model_forward(x)\n",
+    "        if clamp:\n",
+    "            c = torch.clamp(c, 0., 1.)\n",
+    "        return self.cat_normalizer.normalize(c, hard=True)\n",
+    "\n",
+    "    def _logging_loss(self, *loss, stage: str, on_step: bool = False):\n",
+    "        for i, l in enumerate(loss):\n",
+    "            self.log(f'{stage}/{stage}_loss_{i+1}', l, on_step=on_step, on_epoch=True, prog_bar=False, logger=True, sync_dist=True)\n",
+    "\n",
+    "    def _loss_functions(self, x, c, y, y_hat, y_prime=None, is_val=False):\n",
+    "        \"\"\"\n",
+    "        x: input value\n",
+    "        c: conterfactual example\n",
+    "        y: ground truth\n",
+    "        y_hat: predicted result\n",
+    "        y_prime_mode: 'label' or 'predicted'\n",
+    "        \"\"\"\n",
+    "        # flip zero/one\n",
+    "        if y_prime == None:\n",
+    "            y_prime = (y_hat < .5).clone().detach().float()\n",
+    "\n",
+    "        c_y, _ = self(c)\n",
+    "        # loss functions\n",
+    "        if self.smooth_y and not is_val:\n",
+    "            y = smooth_y(y)\n",
+    "            y_prime = smooth_y(y_prime)\n",
+    "        l_1 = self.loss_func_1(y_hat, y)\n",
+    "        l_2 = self.loss_func_2(x, c)\n",
+    "        l_3 = self.loss_func_3(c_y, y_prime)\n",
+    "\n",
+    "        return l_1, l_2, l_3\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        opt_1 = torch.optim.Adam([p for p in self.parameters() if p.requires_grad], lr=self.lr)\n",
+    "        opt_2 = torch.optim.Adam([p for p in self.parameters() if p.requires_grad], lr=self.lr)\n",
+    "        return (opt_1, opt_2)\n",
+    "\n",
+    "    def predictor_step(self, l_1, l_3):\n",
+    "        p_loss = self.lambda_1 * l_1 # + self.lambda_3 * l_3\n",
+    "        self.log('train/p_loss', p_loss, on_step=False, on_epoch=True, sync_dist=True)\n",
+    "        return p_loss\n",
+    "\n",
+    "    def explainer_step(self, l_2, l_3):\n",
+    "        e_loss = self.lambda_2 * l_2 + self.lambda_3 * l_3\n",
+    "        self.log('train/e_loss', e_loss, on_step=False, on_epoch=True, sync_dist=True)\n",
+    "        return e_loss\n",
+    "\n",
+    "    def training_step(self, batch, batch_idx, optimizer_idx):\n",
+    "        # batch\n",
+    "        x, y = batch\n",
+    "        # fwd\n",
+    "        y_hat, c = self(x)\n",
+    "        # loss\n",
+    "        l_1, l_2, l_3 = self._loss_functions(x, c, y, y_hat)\n",
+    "\n",
+    "        result = 0\n",
+    "        if optimizer_idx == 0:\n",
+    "            result = self.predictor_step(l_1, l_3)\n",
+    "\n",
+    "        if optimizer_idx == 1:\n",
+    "            result = self.explainer_step(l_2, l_3)\n",
+    "\n",
+    "        # Logging to TensorBoard by default\n",
+    "        self._logging_loss(l_1, l_2, l_3, stage='train', on_step=False)\n",
+    "        return result\n",
+    "\n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "        # batch\n",
+    "        x, y = batch\n",
+    "\n",
+    "        # fwd\n",
+    "        y_hat, c = self(x, hard=True)\n",
+    "        c_y, _ = self(c)\n",
+    "\n",
+    "        # loss\n",
+    "        l_1, l_2, l_3 = self._loss_functions(x, c, y, y_hat, is_val=True)\n",
+    "        loss = self.predict_step(l_1, l_3) + self.explainer_step(l_2, l_3)\n",
+    "\n",
+    "        # logging val loss\n",
+    "        self._logging_loss(l_1, l_2, l_3, stage='val', on_step=False)\n",
+    "\n",
+    "        # metrics\n",
+    "        metrics = {\n",
+    "            'val/val_loss': loss, 'val/pred_accuracy': self.pred_acc(round(y_hat), y),\n",
+    "            'val/cf_proximity': self.proximity(x, c), 'val/cf_accuracy': self.cf_acc(round(c_y), 1 - round(y_hat)),\n",
+    "            'val/sensitivity': self.sensitivity(x, c, c_y),\n",
+    "        }\n",
+    "        self.log_dict(metrics, on_step=False, on_epoch=True, sync_dist=True)"
    ]
   },
   {
@@ -487,6 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export model\n",
     "class LinearBlock(nn.Module):\n",
     "    def __init__(self, input_dim, out_dim, dropout=0.3):\n",
     "        super().__init__()\n",
@@ -500,26 +720,35 @@
     "        return self.block(x)\n",
     "\n",
     "class MultilayerPerception(nn.Module):\n",
-    "    def __init__(self, dims=[3, 100, 10]):\n",
+    "    def __init__(self, dims=[3, 100, 10], dropout=0.3):\n",
     "        super().__init__()\n",
     "        layers  = []\n",
     "        num_blocks = len(dims)\n",
     "        for i in range(1, num_blocks):\n",
     "            layers += [\n",
-    "                LinearBlock(dims[i-1], dims[i])\n",
+    "                LinearBlock(dims[i-1], dims[i], dropout=dropout)\n",
     "            ]\n",
     "        self.model = nn.Sequential(*layers)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.model(x)\n",
-    "\n",
-    "class BaselinePredictiveModel(PredictionTrainingModule):\n",
+    "        return self.model(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export model\n",
+    "class BaselinePredictiveModel(PredictiveTrainingModule):\n",
     "    def __init__(self, config):\n",
     "        super().__init__(config)\n",
-    "        assert self.enc_dims[-1] == self.dec_dims[0]\n",
+    "        assert self.enc_dims[-1] == self.dec_dims[0], \\\n",
+    "            f\"(enc_dims[-1]={self.enc_dims[-1]}) != (dec_dims[0]={self.dec_dims[0]})\"\n",
     "        self.model = nn.Sequential(\n",
-    "            MultilayerPerception(self.enc_dims),\n",
-    "            MultilayerPerception(self.dec_dims),\n",
+    "            MultilayerPerception(self.enc_dims, self.dropout),\n",
+    "            MultilayerPerception(self.dec_dims, self.dropout),\n",
     "            nn.Linear(self.dec_dims[-1], 1)\n",
     "        )\n",
     "\n",
@@ -528,6 +757,45 @@
     "        x, = x\n",
     "        y_hat = torch.sigmoid(self.model(x))\n",
     "        return torch.squeeze(y_hat, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export model\n",
+    "class CounterNetModel(CFNetTrainingModule):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__(config)\n",
+    "        assert self.enc_dims[-1] == self.dec_dims[0], \\\n",
+    "            f\"(enc_dims[-1]={self.enc_dims[-1]}) != (dec_dims[0]={self.dec_dims[0]})\"\n",
+    "        assert self.enc_dims[-1] == self.exp_dims[0], \\\n",
+    "            f\"(enc_dims[-1]={self.enc_dims[-1]}) != (exp_dims[0]={self.enc_dims[0]})\"\n",
+    "\n",
+    "        self.encoder_model = MultilayerPerception(self.enc_dims)\n",
+    "        # predictor\n",
+    "        self.predictor = MultilayerPerception(self.dec_dims)\n",
+    "        self.pred_linear = nn.Linear(self.dec_dims[-1], 1)\n",
+    "        # explainer\n",
+    "        exp_dims = [x for x in self.exp_dims]\n",
+    "        exp_dims[0] = self.exp_dims[0] + self.dec_dims[-1]\n",
+    "\n",
+    "        self.explainer = nn.Sequential(\n",
+    "            MultilayerPerception(exp_dims),\n",
+    "            nn.Linear(self.exp_dims[-1], self.enc_dims[0])\n",
+    "        )\n",
+    "\n",
+    "    def model_forward(self, x):\n",
+    "        x = self.encoder_model(x)\n",
+    "        # predicted y_hat\n",
+    "        pred = self.predictor(x)\n",
+    "        y_hat = torch.sigmoid(self.pred_linear(pred))\n",
+    "        # counterfactual example\n",
+    "        x = torch.cat((x, pred), -1)\n",
+    "        c = self.explainer(x)\n",
+    "        return torch.squeeze(y_hat, -1), c"
    ]
   }
  ],
