fix multiple bugs

--- a/nbs/01a_functional.ipynb
+++ b/nbs/01a_functional.ipynb
@@ -51,9 +51,38 @@
     "            X = torch.from_numpy(X)\n",
     "        elif isinstance(X, list):\n",
     "            X = torch.tensor(X)\n",
+    "        elif isinstance(X, pd.DataFrame):\n",
+    "            X = X.to_numpy()\n",
+    "            X = torch.from_numpy(X)\n",
+    "        elif isinstance(X, pd.Series):\n",
+    "            X = X.values\n",
+    "            X = torch.tensor(X)\n",
     "        else:\n",
-    "            raise ValueError(f'input X should be one of these types: [`list`, `np.ndarray`, `torch.Tensor`], but got {type(X)}')\n",
+    "            raise ValueError(f'input X should be one of these types: [`list`, `pd.DataFrame`, `np.ndarray`, `torch.Tensor`], but got {type(X)}')\n",
     "    return X.float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32561"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ =_check_type([1, 2])\n",
+    "_ =_check_type(np.array([1, 2]))\n",
+    "_ =_check_type(pd.read_csv('assets/data/dummy_data.csv'))\n",
+    "_ =_check_type(pd.read_csv('assets/data/adult.csv')['income'])"
    ]
   },
   {
