--- a/nbs/01b_data.ipynb
+++ b/nbs/01b_data.ipynb
@@ -411,7 +411,7 @@
     "def describe(configs: List[Dict[str, Dict[str, Any]]]):\n",
     "    r = {\"size\": {}, \"# of Cont\": {}, \"# of Cat\": {}}\n",
     "    for data_name, config in configs:\n",
-    "        data = pd.read_csv(f\"assets/{config['data_dir']}\")\n",
+    "        data = pd.read_csv(f\"{config['data_dir']}\")\n",
     "        data_size = len(data)\n",
     "        cat_len = len(config['discret_cols'])\n",
     "        cont_len = len(config['continous_cols'])\n",
