--- a/nbs/01c.preprocessing.ipynb
+++ b/nbs/01c.preprocessing.ipynb
@@ -45,14 +45,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 790 ms, sys: 39.9 ms, total: 830 ms\nWall time: 826 ms\n"
      ]
     }
    ],
@@ -248,7 +244,7 @@
     "# export\n",
     "class NumpyDataset(TensorDataset):\n",
     "    def __init__(self, *arrs):\n",
-    "        super(NumpyDataset, self).__init__()\n",
+    "        super().__init__()\n",
     "        # init tensors\n",
     "        # small patch: skip continous or discrete array without content\n",
     "        self.tensors = [torch.tensor(arr).float()\n",
