--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -13,7 +13,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# hide\n",
     "%load_ext autoreload\n",
@@ -25,15 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 774 ms, sys: 29.5 ms, total: 803 ms\nWall time: 802 ms\n"
+      "CPU times: user 879 ms, sys: 58.8 ms, total: 938 ms\nWall time: 937 ms\n"
      ]
     }
    ],
@@ -356,17 +356,29 @@
     "    y = data[data.columns[-1]]\n",
     "    return X, y\n",
     "\n",
+    "@check_input_type\n",
     "def train_val_test_split(X, y):\n",
     "    assert len(X) == len(y)\n",
     "    size = len(X)\n",
     "    train_size = int(0.7 * size)    # 70% for training\n",
     "    val_size = int(0.8 * size)      # 10% for validation\n",
     "\n",
-    "    return tuple(\n",
-    "        tuple(X[: train_size], y[: train_size]),\n",
-    "        tuple(X[train_size:val_size], y[train_size:val_size]),\n",
-    "        tuple(X[val_size:], y[val_size:])\n",
+    "    return (\n",
+    "        (X[: train_size], y[: train_size]),\n",
+    "        (X[train_size:val_size], y[train_size:val_size]),\n",
+    "        (X[val_size:], y[val_size:])\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('assets/data/dummy_data.csv')\n",
+    "X, y = split_X_y(data)\n",
+    "_ = train_val_test_split(X, y)"
    ]
   },
   {
@@ -439,8 +451,10 @@
     "        self.example_input_array = torch.randn((1, self.enc_dims[0]))\n",
     "\n",
     "    def __check_cols(self):\n",
-    "        assert sorted(list(self.data.columns)) == sorted(self.continous_cols + self.discret_cols)\n",
-    "        self.data = self.data.astype({col: np.float for col in self.continous_cols})\n",
+    "        assert sorted(list(self.data.columns[:-1])) == sorted(self.continous_cols + self.discret_cols), \\\n",
+    "            f\"data columns ({sorted(list(self.data.columns[:-1]))}) is not the same as continous_cols and discret_cols ({sorted(self.continous_cols + self.discret_cols)})\"\n",
+    "        self.data = self.data.astype(\n",
+    "            {col: np.float for col in self.continous_cols})\n",
     "\n",
     "    def training_epoch_end(self, outs):\n",
     "        if self.current_epoch == 0:\n",
@@ -473,10 +487,10 @@
     "            f'The input dimension X (shape: {X.shape[-1]})  != encoder_dims[0]: {self.enc_dims}'\n",
     "\n",
     "        # prepare train & test\n",
-    "        train, val, test = train_val_test_split(X, y.to_numpy())\n",
-    "        self.train_dataset = NumpyDataset(*train)\n",
-    "        self.val_dataset = NumpyDataset(*val)\n",
-    "        self.test_dataset = NumpyDataset(*test)\n",
+    "        train, val, test = train_val_test_split(X, y)\n",
+    "        self.train_dataset = TensorDataset(*train)\n",
+    "        self.val_dataset = TensorDataset(*val)\n",
+    "        self.test_dataset = TensorDataset(*test)\n",
     "\n",
     "    def train_dataloader(self):\n",
     "        return DataLoader(self.train_dataset, batch_size=self.batch_size,\n",
@@ -562,9 +576,9 @@
     "        y_hat = self(*x)\n",
     "        # loss\n",
     "        loss = F.binary_cross_entropy(y_hat, y)\n",
-    "        self.accuracy(y_hat, y)\n",
-    "        self.log('val/val_loss_1', loss, on_step=False, on_epoch=True, prog_bar=False, logger=True)\n",
-    "        self.log('val/pred_accuracy', self.accuracy, on_step=False, on_epoch=True, prog_bar=False, logger=True, sync_dist=True)"
+    "        \n",
+    "        self.log('val/val_loss', loss, on_step=False, on_epoch=True, prog_bar=False, logger=True)\n",
+    "        self.log('val/pred_accuracy', self.val_acc(y_hat, y.int()), on_step=False, on_epoch=True, sync_dist=True)"
    ]
   },
   {
@@ -731,7 +745,7 @@
     "        self.model = nn.Sequential(*layers)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.model(x)\n"
+    "        return self.model(x)"
    ]
   },
   {
