--- a/nbs/00_pipeline.ipynb
+++ b/nbs/00_pipeline.ipynb
@@ -38,7 +38,8 @@
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils.all import *\n",
-    "from counternet.training_module import *"
+    "from counternet.training_module import BaseModule\n",
+    "from counternet.model import BaselinePredictiveModel, CounterNetModel"
    ]
   },
   {
@@ -85,7 +86,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "class CFNetTrainer(object):\n",
+    "class ModelTrainer(object):\n",
     "    def __init__(self,\n",
     "                 model: BaseModule,\n",
     "                 t_configs: Dict[str, Any],\n",
@@ -152,11 +153,150 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "\n",
+      "  | Name        | Type              | Params | In sizes | Out sizes\n",
+      "-------------------------------------------------------------------------\n",
+      "0 | val_acc     | Accuracy          | 0      | ?        | ?        \n",
+      "1 | model       | Sequential        | 2.1 K  | [1, 29]  | [1, 1]   \n",
+      "2 | sensitivity | SensitivityMetric | 0      | ?        | ?        \n",
+      "-------------------------------------------------------------------------\n",
+      "2.1 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "2.1 K     Total params\n",
+      "0.009     Total estimated model params size (MB)\n",
+      "train (tensor([[0.4184, 0.4490, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
+      "        [0.3163, 0.3980, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
+      "        [0.3469, 0.3980, 0.0000,  ..., 1.0000, 1.0000, 0.0000],\n",
+      "        ...,\n",
+      "        [0.3878, 0.3980, 0.0000,  ..., 0.0000, 0.0000, 1.0000],\n",
+      "        [0.3571, 0.3469, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
+      "        [0.1939, 0.4796, 0.0000,  ..., 1.0000, 0.0000, 1.0000]]), tensor([1., 0., 1.,  ..., 0., 1., 0.]))\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67d6a572d1bf4d0385d38a62a9dc5d17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:69: UserWarning: The dataloader, val dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/core/step_result.py:115: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  value = torch.tensor(value, device=device, dtype=torch.float)\n",
+      "Global seed set to 31\n",
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:69: UserWarning: The dataloader, train dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb5cb5c32a0745a3895e97de91ad46c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c18566866d4460398b14774b93b7519",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'trainer': <pytorch_lightning.trainer.trainer.Trainer at 0x7f45f405a5e0>,\n",
+       " 'module': BaselinePredictiveModel(\n",
+       "   (val_acc): Accuracy()\n",
+       "   (model): Sequential(\n",
+       "     (0): MultilayerPerception(\n",
+       "       (model): Sequential(\n",
+       "         (0): LinearBlock(\n",
+       "           (block): Sequential(\n",
+       "             (0): Linear(in_features=29, out_features=50, bias=True)\n",
+       "             (1): LeakyReLU(negative_slope=0.01)\n",
+       "             (2): Dropout(p=0.3, inplace=False)\n",
+       "           )\n",
+       "         )\n",
+       "         (1): LinearBlock(\n",
+       "           (block): Sequential(\n",
+       "             (0): Linear(in_features=50, out_features=10, bias=True)\n",
+       "             (1): LeakyReLU(negative_slope=0.01)\n",
+       "             (2): Dropout(p=0.3, inplace=False)\n",
+       "           )\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "     (1): MultilayerPerception(\n",
+       "       (model): Sequential(\n",
+       "         (0): LinearBlock(\n",
+       "           (block): Sequential(\n",
+       "             (0): Linear(in_features=10, out_features=10, bias=True)\n",
+       "             (1): LeakyReLU(negative_slope=0.01)\n",
+       "             (2): Dropout(p=0.3, inplace=False)\n",
+       "           )\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "     (2): Linear(in_features=10, out_features=1, bias=True)\n",
+       "   )\n",
+       "   (sensitivity): SensitivityMetric()\n",
+       " )}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t_config = load_json('assets/configs/trainer.json')\n",
     "m_config = load_json('assets/configs/adult.json')\n",
-    "# model = "
+    "model = BaselinePredictiveModel(m_config)\n",
+    "model_trainer = ModelTrainer(\n",
+    "    model, t_config\n",
+    ")\n",
+    "model_trainer.fit()"
    ]
   },
   {
