fix bugs in CounterNet Training

--- a/nbs/01c.preprocessing.ipynb
+++ b/nbs/01c.preprocessing.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 790 ms, sys: 39.9 ms, total: 830 ms\nWall time: 826 ms\n"
+      "CPU times: user 742 ms, sys: 90.2 ms, total: 832 ms\nWall time: 826 ms\n"
      ]
     }
    ],
@@ -131,28 +131,29 @@
     "# export\n",
     "class MinMaxScaler(ABCScaler):\n",
     "    \"\"\"rewrite `MinMaxScaler` object in sci-kit learn in pytorch to eliminate cpu-gpu communication time\"\"\"\n",
-    "    min, max = None, None\n",
+    "    min_, max_ = None, None\n",
     "\n",
     "    @check_object_input_type\n",
     "    def fit(self, X):\n",
-    "        self.min, self.max = torch.min(X), torch.max(X)\n",
-    "        assert self.min == self.max, f\"min(X) == max(X) is not allowed.\"\n",
+    "        self.min_, self.max_ = torch.min(X), torch.max(X)\n",
+    "        assert self.min_ != self.max_, f\"min(X) == max(X) is not allowed.\"\n",
     "        return self\n",
     "\n",
     "    @check_object_input_type\n",
     "    def transform(self, X):\n",
-    "        if (self.mean_ is None) or (self.std_ is None):\n",
+    "        if (self.min_ is None) or (self.max_ is None):\n",
     "            raise NotImplementedError(f'The scaler has not been fitted.')\n",
-    "        return (X - self.min) / (self.max - self.min)\n",
+    "        return (X - self.min_) / (self.max_ - self.min_)\n",
     "\n",
     "    @check_object_input_type\n",
     "    def fit_transform(self, X):\n",
-    "        self.min, self.max = torch.min(X), torch.max(X)\n",
-    "        return (X - self.min) / (self.max - self.min )\n",
+    "        self.min_, self.max_ = torch.min(X), torch.max(X)\n",
+    "        assert self.min_ != self.max_, f\"min(X) == max(X) is not allowed.\"\n",
+    "        return (X - self.min_) / (self.max_ - self.min_)\n",
     "\n",
     "    @check_object_input_type\n",
     "    def inverse_transform(self, X):\n",
-    "        return X * (self.max - self.min) + self.min"
+    "        return X * (self.max_ - self.min_) + self.min_"
    ]
   },
   {
@@ -212,7 +213,14 @@
     "_X = adult_data[['age', 'hours_per_week']].to_numpy()\n",
     "cont = scalar.fit_transform(_X)\n",
     "assert (torch.isclose(torch.from_numpy(_X).float(), scalar.inverse_transform(cont))).all()\n",
-    "assert torch.logical_and(torch.zeros_like(cont) <= cont, cont <= torch.ones_like(cont)).all()"
+    "assert ((0 <= cont) & (cont <= 1)).all()\n",
+    "\n",
+    "scalar = MinMaxScaler()\n",
+    "_X = adult_data[['age', 'hours_per_week']].to_numpy()\n",
+    "scalar.fit(_X)\n",
+    "cont = scalar.transform(_X)\n",
+    "assert (torch.isclose(torch.from_numpy(_X).float(), scalar.inverse_transform(cont))).all()\n",
+    "assert ((0 <= cont) & (cont <= 1)).all()\n"
    ]
   },
   {
