--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -13,15 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hide\n",
     "%load_ext autoreload\n",
@@ -33,13 +25,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 31\n"
+     ]
+    }
+   ],
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils.all import *\n",
     "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
-    "\n",
     "\n",
     "pl_logger = logging.getLogger('lightning')"
    ]
@@ -71,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 879 ms, sys: 58.8 ms, total: 938 ms\nWall time: 937 ms\n"
+      "CPU times: user 818 ms, sys: 20.3 ms, total: 839 ms\nWall time: 837 ms\n"
      ]
     }
    ],
@@ -120,6 +119,21 @@
     "                x[:, cat_idx: cat_end_idx] = F.softmax(x[:, cat_idx: cat_end_idx].clone().detach(), dim=-1)\n",
     "            cat_idx = cat_end_idx\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = [\n",
+    "    ['a', 'b', 'c'],\n",
+    "    ['e', 'f'],\n",
+    "    [1, 2]\n",
+    "]\n",
+    "X = [[categories[_j][np.random.randint(0, len(categories[_j]))] for _j in range(3)] for _i in range(100)]\n",
+    "X_ = OneHotEncoder().fit_transform(X)\n"
    ]
   },
   {
@@ -456,6 +470,12 @@
     "        self.data = self.data.astype(\n",
     "            {col: np.float for col in self.continous_cols})\n",
     "\n",
+    "    def __check_cat_size(self, X_cat: torch.Tensor, categories: List[List[Any]]):\n",
+    "        n = 0\n",
+    "        for cat in categories:\n",
+    "            n += len(cat)\n",
+    "        return X_cat.size(-1) == n\n",
+    "\n",
     "    def training_epoch_end(self, outs):\n",
     "        if self.current_epoch == 0:\n",
     "            self.logger.log_hyperparams(self.hparams)\n",
@@ -474,14 +494,16 @@
     "\n",
     "        # init categorical normalizer to enable categorical features to be one-hot-encoding format\n",
     "        cat_arrays = self.ohe.categories_ if self.discret_cols else []\n",
-    "        self.cat_normalizer = CategoricalNormalizer(cat_arrays, cat_idx=len(X_cont))\n",
+    "        self.cat_normalizer = CategoricalNormalizer(cat_arrays, cat_idx=len(self.continous_cols))\n",
+    "        assert self.__check_cat_size(X_cat, cat_arrays)\n",
     "\n",
     "        # init sensitivity metric\n",
     "        self.sensitivity = SensitivityMetric(\n",
-    "            predict_fn=self.predict, scaler=self.scaler, cat_idx=len(X_cont), threshold=self.threshold)\n",
+    "            predict_fn=self.predict, scaler=self.scaler, cat_idx=len(self.continous_cols), threshold=self.threshold)\n",
     "\n",
-    "        pl_logger.info(f\"x_cont: {X_cont.size()}, x_cat: {X_cat.size()}\")\n",
-    "        pl_logger.info(\"X shape: \", X.size())\n",
+    "        print(f\"x_cont: {X_cont.size()}, x_cat: {X_cat.size()}\")\n",
+    "        print(f\"categories: {cat_arrays}\")\n",
+    "        print(\"X shape: \", X.size())\n",
     "\n",
     "        assert X.size(-1) == self.enc_dims[0],\\\n",
     "            f'The input dimension X (shape: {X.shape[-1]})  != encoder_dims[0]: {self.enc_dims}'\n",
@@ -547,7 +569,6 @@
     "        return self.model_forward(x)\n",
     "\n",
     "    def predict(self, x):\n",
-    "        self.freeze()\n",
     "        y_hat = self(x)\n",
     "        return torch.round(y_hat)\n",
     "\n",
@@ -576,7 +597,7 @@
     "        y_hat = self(*x)\n",
     "        # loss\n",
     "        loss = F.binary_cross_entropy(y_hat, y)\n",
-    "        \n",
+    "\n",
     "        self.log('val/val_loss', loss, on_step=False, on_epoch=True, prog_bar=False, logger=True)\n",
     "        self.log('val/pred_accuracy', self.val_acc(y_hat, y.int()), on_step=False, on_epoch=True, sync_dist=True)"
    ]
@@ -586,6 +607,30 @@
    "metadata": {},
    "source": [
     "## CounterNet Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export utils.functional\n",
+    "@check_input_type\n",
+    "def flip_binary(x):\n",
+    "    assert ((x < 0) & (x > 1)).sum() == 0\n",
+    "    return (1 - torch.round(x)).clone().detach()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x = torch.tensor([0.1, 0.56, 0.9, 1., 0.])\n",
+    "flipped = flip_binary(_x)\n",
+    "assert torch.equal(flipped, torch.tensor([1, 0, 0, 0, 1], dtype=torch.float))"
    ]
   },
   {
@@ -606,13 +651,12 @@
     "    def forward(self, x, hard: bool=False):\n",
     "        \"\"\"hard: categorical features in counterfactual is one-hot-encoding or not\"\"\"\n",
     "        y, c = self.model_forward(x)\n",
-    "        c = self.cat_normalize(c, hard=hard)\n",
+    "        c = self.cat_normalizer.normalize(c, hard=hard)\n",
     "        return y, c\n",
     "\n",
     "    def predict(self, x):\n",
     "        \"\"\"x has not been preprocessed\"\"\"\n",
-    "        self.freeze()\n",
-    "        y_hat, c = self.model_forward(x)\n",
+    "        y_hat, _ = self.model_forward(x)\n",
     "        return torch.round(y_hat)\n",
     "\n",
     "    def generate_cf(self, x, clamp=False):\n",
@@ -636,7 +680,7 @@
     "        \"\"\"\n",
     "        # flip zero/one\n",
     "        if y_prime == None:\n",
-    "            y_prime = (y_hat < .5).clone().detach().float()\n",
+    "            y_prime = flip_binary(y_hat)\n",
     "\n",
     "        c_y, _ = self(c)\n",
     "        # loss functions\n",
@@ -693,16 +737,16 @@
     "\n",
     "        # loss\n",
     "        l_1, l_2, l_3 = self._loss_functions(x, c, y, y_hat, is_val=True)\n",
-    "        loss = self.predict_step(l_1, l_3) + self.explainer_step(l_2, l_3)\n",
+    "        loss = self.lambda_1 * l_1 + self.lambda_2 * l_2 + self.lambda_3 * l_3\n",
     "\n",
     "        # logging val loss\n",
     "        self._logging_loss(l_1, l_2, l_3, stage='val', on_step=False)\n",
     "\n",
     "        # metrics\n",
     "        metrics = {\n",
-    "            'val/val_loss': loss, 'val/pred_accuracy': self.pred_acc(round(y_hat), y),\n",
-    "            'val/cf_proximity': self.proximity(x, c), 'val/cf_accuracy': self.cf_acc(round(c_y), 1 - round(y_hat)),\n",
-    "            'val/sensitivity': self.sensitivity(x, c, c_y),\n",
+    "            'val/val_loss': loss, 'val/pred_accuracy': self.pred_acc(torch.round(y_hat), y.int()),\n",
+    "            'val/cf_proximity': self.proximity(x, c), 'val/sensitivity': self.sensitivity(x, c, c_y), \n",
+    "            'val/cf_accuracy': self.cf_acc(torch.round(c_y), flip_binary(y_hat).int()),\n",
     "        }\n",
     "        self.log_dict(metrics, on_step=False, on_epoch=True, sync_dist=True)"
    ]
@@ -721,7 +765,7 @@
    "outputs": [],
    "source": [
     "# export model\n",
-    "class LinearBlock(nn.Module):\n",
+    "class LinearBlock(pl.LightningModule):\n",
     "    def __init__(self, input_dim, out_dim, dropout=0.3):\n",
     "        super().__init__()\n",
     "        self.block = nn.Sequential(\n",
@@ -733,7 +777,7 @@
     "    def forward(self, x):\n",
     "        return self.block(x)\n",
     "\n",
-    "class MultilayerPerception(nn.Module):\n",
+    "class MultilayerPerception(pl.LightningModule):\n",
     "    def __init__(self, dims=[3, 100, 10], dropout=0.3):\n",
     "        super().__init__()\n",
     "        layers  = []\n",
@@ -783,34 +827,200 @@
     "class CounterNetModel(CFNetTrainingModule):\n",
     "    def __init__(self, config):\n",
     "        super().__init__(config)\n",
-    "        assert self.enc_dims[-1] == self.dec_dims[0], \\\n",
-    "            f\"(enc_dims[-1]={self.enc_dims[-1]}) != (dec_dims[0]={self.dec_dims[0]})\"\n",
-    "        assert self.enc_dims[-1] == self.exp_dims[0], \\\n",
-    "            f\"(enc_dims[-1]={self.enc_dims[-1]}) != (exp_dims[0]={self.enc_dims[0]})\"\n",
+    "        assert self.enc_dims[-1] == self.dec_dims[0]\n",
+    "        assert self.enc_dims[-1] == self.exp_dims[0]\n",
     "\n",
     "        self.encoder_model = MultilayerPerception(self.enc_dims)\n",
-    "        # predictor\n",
-    "        self.predictor = MultilayerPerception(self.dec_dims)\n",
-    "        self.pred_linear = nn.Linear(self.dec_dims[-1], 1)\n",
-    "        # explainer\n",
-    "        exp_dims = [x for x in self.exp_dims]\n",
-    "        exp_dims[0] = self.exp_dims[0] + self.dec_dims[-1]\n",
-    "\n",
+    "        self.predictor = nn.Sequential(\n",
+    "            MultilayerPerception(self.dec_dims),\n",
+    "            nn.Linear(self.dec_dims[-1], 1)\n",
+    "        )\n",
     "        self.explainer = nn.Sequential(\n",
-    "            MultilayerPerception(exp_dims),\n",
+    "            MultilayerPerception(self.exp_dims),\n",
     "            nn.Linear(self.exp_dims[-1], self.enc_dims[0])\n",
     "        )\n",
     "\n",
     "    def model_forward(self, x):\n",
     "        x = self.encoder_model(x)\n",
     "        # predicted y_hat\n",
-    "        pred = self.predictor(x)\n",
-    "        y_hat = torch.sigmoid(self.pred_linear(pred))\n",
+    "        y_hat = torch.sigmoid(self.predictor(x))\n",
     "        # counterfactual example\n",
-    "        x = torch.cat((x, pred), -1)\n",
     "        c = self.explainer(x)\n",
     "        return torch.squeeze(y_hat, -1), c"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "x_cont: torch.Size([32561, 2]), x_cat: torch.Size([32561, 27])\n",
+      "categories: [array(['Government', 'Other/Unknown', 'Private', 'Self-Employed'],\n",
+      "      dtype=object), array(['Assoc', 'Bachelors', 'Doctorate', 'HS-grad', 'Masters',\n",
+      "       'Prof-school', 'School', 'Some-college'], dtype=object), array(['Divorced', 'Married', 'Separated', 'Single', 'Widowed'],\n",
+      "      dtype=object), array(['Blue-Collar', 'Other/Unknown', 'Professional', 'Sales', 'Service',\n",
+      "       'White-Collar'], dtype=object), array(['Other', 'White'], dtype=object), array(['Female', 'Male'], dtype=object)]\n",
+      "X shape:  torch.Size([32561, 29])\n",
+      "\n",
+      "  | Name          | Type                 | Params | In sizes | Out sizes\n",
+      "------------------------------------------------------------------------------\n",
+      "0 | pred_acc      | Accuracy             | 0      | ?        | ?        \n",
+      "1 | cf_acc        | Accuracy             | 0      | ?        | ?        \n",
+      "2 | proximity     | ProximityMetric      | 0      | ?        | ?        \n",
+      "3 | encoder_model | MultilayerPerception | 2.0 K  | [1, 29]  | [1, 10]  \n",
+      "4 | predictor     | Sequential           | 121    | [1, 10]  | [1, 1]   \n",
+      "5 | explainer     | Sequential           | 2.0 K  | [1, 10]  | [1, 29]  \n",
+      "6 | sensitivity   | SensitivityMetric    | 0      | ?        | ?        \n",
+      "------------------------------------------------------------------------------\n",
+      "4.2 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "4.2 K     Total params\n",
+      "0.017     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e463ab1c065441d8235319b44dcfb61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:69: UserWarning: The dataloader, val dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/core/step_result.py:115: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  value = torch.tensor(value, device=device, dtype=torch.float)\n",
+      "Global seed set to 31\n",
+      "/home/birk/software/miniconda3/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:69: UserWarning: The dataloader, train dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1918d02aea004c17aa0c797333ae6615",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad63fc51574e4cf8a53bc3f5598896c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'trainer': <pytorch_lightning.trainer.trainer.Trainer at 0x7f320a1500d0>,\n",
+       " 'module': CounterNetModel(\n",
+       "   (pred_acc): Accuracy()\n",
+       "   (cf_acc): Accuracy()\n",
+       "   (proximity): ProximityMetric()\n",
+       "   (encoder_model): MultilayerPerception(\n",
+       "     (model): Sequential(\n",
+       "       (0): LinearBlock(\n",
+       "         (block): Sequential(\n",
+       "           (0): Linear(in_features=29, out_features=50, bias=True)\n",
+       "           (1): LeakyReLU(negative_slope=0.01)\n",
+       "           (2): Dropout(p=0.3, inplace=False)\n",
+       "         )\n",
+       "       )\n",
+       "       (1): LinearBlock(\n",
+       "         (block): Sequential(\n",
+       "           (0): Linear(in_features=50, out_features=10, bias=True)\n",
+       "           (1): LeakyReLU(negative_slope=0.01)\n",
+       "           (2): Dropout(p=0.3, inplace=False)\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "   )\n",
+       "   (predictor): Sequential(\n",
+       "     (0): MultilayerPerception(\n",
+       "       (model): Sequential(\n",
+       "         (0): LinearBlock(\n",
+       "           (block): Sequential(\n",
+       "             (0): Linear(in_features=10, out_features=10, bias=True)\n",
+       "             (1): LeakyReLU(negative_slope=0.01)\n",
+       "             (2): Dropout(p=0.3, inplace=False)\n",
+       "           )\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "     (1): Linear(in_features=10, out_features=1, bias=True)\n",
+       "   )\n",
+       "   (explainer): Sequential(\n",
+       "     (0): MultilayerPerception(\n",
+       "       (model): Sequential(\n",
+       "         (0): LinearBlock(\n",
+       "           (block): Sequential(\n",
+       "             (0): Linear(in_features=10, out_features=50, bias=True)\n",
+       "             (1): LeakyReLU(negative_slope=0.01)\n",
+       "             (2): Dropout(p=0.3, inplace=False)\n",
+       "           )\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "     (1): Linear(in_features=50, out_features=29, bias=True)\n",
+       "   )\n",
+       "   (sensitivity): SensitivityMetric()\n",
+       " )}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from counternet.pipeline import ModelTrainer\n",
+    "\n",
+    "t_config = load_json('assets/configs/trainer.json')\n",
+    "m_config = load_json('assets/configs/adult.json')\n",
+    "model = CounterNetModel(m_config)\n",
+    "model_trainer = ModelTrainer(\n",
+    "    model, t_config\n",
+    ")\n",
+    "model_trainer.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
