--- a/nbs/00_pipeline.ipynb
+++ b/nbs/00_pipeline.ipynb
@@ -170,26 +170,17 @@
       "2.1 K     Trainable params\n",
       "0         Non-trainable params\n",
       "2.1 K     Total params\n",
-      "0.009     Total estimated model params size (MB)\n",
-      "train (tensor([[0.4184, 0.4490, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
-      "        [0.3163, 0.3980, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
-      "        [0.3469, 0.3980, 0.0000,  ..., 1.0000, 1.0000, 0.0000],\n",
-      "        ...,\n",
-      "        [0.3878, 0.3980, 0.0000,  ..., 0.0000, 0.0000, 1.0000],\n",
-      "        [0.3571, 0.3469, 0.0000,  ..., 1.0000, 0.0000, 1.0000],\n",
-      "        [0.1939, 0.4796, 0.0000,  ..., 1.0000, 0.0000, 1.0000]]), tensor([1., 0., 1.,  ..., 0., 1., 0.]))\n"
+      "0.009     Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67d6a572d1bf4d0385d38a62a9dc5d17",
+       "model_id": "1e46ffcfb52c4fb397818392878b931c",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
-      ]
+      "text/plain": "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -210,13 +201,11 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb5cb5c32a0745a3895e97de91ad46c1",
+       "model_id": "c933e0909084401fba97fcaa963603bb",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
-      ]
+      "text/plain": "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -224,13 +213,11 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c18566866d4460398b14774b93b7519",
+       "model_id": "25f0bd459ee946cab94138b76cd65700",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
-      ]
+      "text/plain": "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -245,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "{'trainer': <pytorch_lightning.trainer.trainer.Trainer at 0x7f45f405a5e0>,\n",
+       "{'trainer': <pytorch_lightning.trainer.trainer.Trainer at 0x7f97644de850>,\n",
        " 'module': BaselinePredictiveModel(\n",
        "   (val_acc): Accuracy()\n",
        "   (model): Sequential(\n",
