implement pipelines; refactor code structure

--- a/nbs/01b_data.ipynb
+++ b/nbs/01b_data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp utils.dataset"
+    "# default_exp dataset"
    ]
   },
   {
@@ -418,7 +418,7 @@
     "        r['size'][data_name] = data_size\n",
     "        r['# of Cont'][data_name] = cont_len\n",
     "        r['# of Cat'][data_name] = cat_len\n",
-    "    \n",
+    "\n",
     "    # pd.DataFrame.from_dict(r).to_csv(\"../results/data_describe.csv\")\n",
     "    return r"
    ]
