--- a/nbs/01c.preprocessing.ipynb
+++ b/nbs/01c.preprocessing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp utils.processing"
+    "# default_exp processing"
    ]
   },
   {
@@ -48,7 +48,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 742 ms, sys: 90.2 ms, total: 832 ms\nWall time: 826 ms\n"
+      "CPU times: user 742 ms, sys: 90.2 ms, total: 832 ms\n",
+      "Wall time: 826 ms\n"
      ]
     }
    ],
