--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -25,22 +25,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils.all import *\n",
     "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
+    "from counternet.cf_explainer import GlobalExplainerBase\n",
     "\n",
-    "pl_logger = logging.getLogger('lightning')"
+    "pl_logger = logging.getLogger('lightning').setLevel(logging.ERROR)"
    ]
   },
   {
@@ -52,7 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pl version: 1.3.5\ntorch version: 1.8.0\n"
+      "pl version: 1.3.5\n",
+      "torch version: 1.8.0\n"
      ]
     }
    ],
@@ -70,7 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 818 ms, sys: 20.3 ms, total: 839 ms\nWall time: 837 ms\n"
+      "CPU times: user 818 ms, sys: 20.3 ms, total: 839 ms\n",
+      "Wall time: 837 ms\n"
      ]
     }
    ],
@@ -100,9 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export utils.processing\n",
+    "# export processing\n",
     "class CategoricalNormalizer(object):\n",
-    "    \"\"\"implement post-processing step to enforce each elements \n",
+    "    \"\"\"implement post-processing step to enforce each elements\n",
     "    in every category in the range of [0, 1] and output to 1.\n",
     "    \"\"\"\n",
     "    def __init__(self, categories: List[List[Any]], cat_idx: int):\n",
@@ -340,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export utils.functional\n",
+    "# export functional_utils\n",
     "def l1_mean(x, c):\n",
     "    return F.l1_loss(x, c, reduction='mean') / x.abs().mean() # MAD\n",
     "\n",
@@ -355,7 +350,7 @@
     "    assert f_name in _loss_functions.keys(), \\\n",
     "        f'function name `{f_name}` is not in the loss function list {_loss_functions.keys()}'\n",
     "\n",
-    "    return _loss_functions[f_name]\n"
+    "    return _loss_functions[f_name]"
    ]
   },
   {
@@ -364,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export utils.functional\n",
+    "# export functional_utils\n",
     "def split_X_y(data: pd.DataFrame):\n",
     "    X = data[data.columns[:-1]]\n",
     "    y = data[data.columns[-1]]\n",
@@ -540,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export utils.functional\n",
+    "# export functional_utils\n",
     "def uniform(shape: tuple, r1: float, r2: float, device=None):\n",
     "    assert r1 < r2, f\"Issue: r1 ({r1}) >= r2 ({r2})\"\n",
     "    return (r2 - r1) * torch.rand(*shape, device=device) + r1\n",
@@ -615,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export utils.functional\n",
+    "# export functional_utils\n",
     "@check_input_type\n",
     "def flip_binary(x):\n",
     "    assert ((x < 0) & (x > 1)).sum() == 0\n",
@@ -640,7 +635,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "class CFNetTrainingModule(BaseModule):\n",
+    "class CFNetTrainingModule(BaseModule, GlobalExplainerBase):\n",
     "    def __init__(self, configs: Dict[str, Any]):\n",
     "        super().__init__(configs)\n",
     "        # define metrics\n",
@@ -745,7 +740,7 @@
     "        # metrics\n",
     "        metrics = {\n",
     "            'val/val_loss': loss, 'val/pred_accuracy': self.pred_acc(torch.round(y_hat), y.int()),\n",
-    "            'val/cf_proximity': self.proximity(x, c), 'val/sensitivity': self.sensitivity(x, c, c_y), \n",
+    "            'val/cf_proximity': self.proximity(x, c), 'val/sensitivity': self.sensitivity(x, c, c_y),\n",
     "            'val/cf_accuracy': self.cf_acc(torch.round(c_y), flip_binary(y_hat).int()),\n",
     "        }\n",
     "        self.log_dict(metrics, on_step=False, on_epoch=True, sync_dist=True)"
@@ -891,7 +886,9 @@
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
+      "text/plain": [
+       "HBox(children=(HTML(value='Validation sanity check'), FloatProgress(value=1.0, bar_style='info', layout=Layout…"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -916,7 +913,9 @@
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
+      "text/plain": [
+       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -928,7 +927,9 @@
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
+      "text/plain": [
+       "HBox(children=(HTML(value='Validating'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), m…"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
