--- a/nbs/00a_evaluation.ipynb
+++ b/nbs/00a_evaluation.ipynb
@@ -29,8 +29,7 @@
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "from counternet.utils.functional import *\n",
-    "from counternet.utils.processing import *"
+    "from counternet.utils import *"
    ]
   }
  ],
