--- a/nbs/01a_functional.ipynb
+++ b/nbs/01a_functional.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp utils.functional"
+    "# default_exp functional_utils"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "import functools\n"
+    "import functools"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "# export\n",
     "def check_input_type(func):\n",
     "    \"\"\"check if all inputs are torch.Tensor\"\"\"\n",
-    "    @functools.wraps(func) \n",
+    "    @functools.wraps(func)\n",
     "    def wrapper_check_input_type(*args):\n",
     "        new_args = []\n",
     "        for X in list(args):\n",
@@ -148,7 +148,7 @@
     "# export\n",
     "def check_object_input_type(func):\n",
     "    \"\"\"check if all inputs are torch.Tensor\"\"\"\n",
-    "    @functools.wraps(func) \n",
+    "    @functools.wraps(func)\n",
     "    def wrapper_check_input_type(ref, *args):\n",
     "        new_args = [ref]\n",
     "        for X in list(args):\n",
