--- a/nbs/01b_data.ipynb
+++ b/nbs/01b_data.ipynb
@@ -49,7 +49,7 @@
     "        json.dump(dictionary, outfile, indent=4)\n",
     "\n",
     "\n",
-    "def load_json(file_name: str):\n",
+    "def load_configs(file_name: Path):\n",
     "    # if os.path.exists(file_name):\n",
     "    #     raise FileNotFoundError(f\"{file_name} is not found.\")\n",
     "    with open(file_name) as json_file:\n",
@@ -58,7 +58,7 @@
     "\n",
     "def update_json_file(param: dict, file_name: str):\n",
     "    if os.path.exists(file_name):\n",
-    "        old_param = load_json(file_name)\n",
+    "        old_param = load_configs(file_name)\n",
     "    else:\n",
     "        old_param = {}\n",
     "    # copy to old_param\n",
