--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "from counternet.utils.all import *\n",
+    "from counternet.utils import *\n",
     "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
     "from counternet.cf_explainer import GlobalExplainerBase\n",
     "\n",
@@ -496,9 +496,7 @@
     "        self.sensitivity = SensitivityMetric(\n",
     "            predict_fn=self.predict, scaler=self.scaler, cat_idx=len(self.continous_cols), threshold=self.threshold)\n",
     "\n",
-    "        print(f\"x_cont: {X_cont.size()}, x_cat: {X_cat.size()}\")\n",
-    "        print(f\"categories: {cat_arrays}\")\n",
-    "        print(\"X shape: \", X.size())\n",
+    "        print(f\"x_cont: {X_cont.size()}, x_cat: {X_cat.size()}, X shape: {X.size()}\")\n",
     "\n",
     "        assert X.size(-1) == self.enc_dims[0],\\\n",
     "            f'The input dimension X (shape: {X.shape[-1]})  != encoder_dims[0]: {self.enc_dims}'\n",
