--- a/nbs/01c.preprocessing.ipynb
+++ b/nbs/01c.preprocessing.ipynb
@@ -35,8 +35,8 @@
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "from counternet.utils.functional import *\n",
-    "from counternet.utils.dataset import load_adult_income_dataset"
+    "from counternet.functional_utils import *\n",
+    "from counternet.dataset import load_adult_income_dataset"
    ]
   },
   {
