--- a/nbs/02_cf_explainer.ipynb
+++ b/nbs/02_cf_explainer.ipynb
@@ -25,19 +25,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "from counternet.utils import CategoricalNormalizer, flip_binary"
+    "from counternet.utils import CategoricalNormalizer, flip_binary, load_configs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "class Clamp(torch.autograd.Function):\n",
+    "    \"\"\"\n",
+    "    Clamp parameter to [0, 1]\n",
+    "    code from: https://discuss.pytorch.org/t/regarding-clamped-learnable-parameter/58474/4\n",
+    "    \"\"\"\n",
+    "    @staticmethod\n",
+    "    def forward(ctx, input):\n",
+    "        return input.clamp(min=0, max=1)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def backward(ctx, grad_output):\n",
+    "        return grad_output.clone()"
    ]
   },
   {
@@ -65,6 +78,7 @@
     "        super().__init__()\n",
     "        self.pred_fn = pred_fn\n",
     "        self.configs = configs\n",
+    "        self.clamp = Clamp()\n",
     "\n",
     "    def forward(self):\n",
     "        raise NotImplementedError\n",
@@ -135,7 +149,7 @@
     "        return 1.0 * l_1 + 0.5 * l_2\n",
     "\n",
     "    def generate_cf(self, x: torch.Tensor):\n",
-    "        self.cf = nn.Parameter(x.clone())\n",
+    "        self.cf = nn.Parameter(x.clone(), requires_grad=True)\n",
     "        optim = self.configure_optimizers()\n",
     "        for i in range(self.steps):\n",
     "            c = self()\n",
@@ -145,16 +159,9 @@
     "            loss.backward()\n",
     "            optim.step()\n",
     "\n",
-    "        cf = self.cf * 1.0\n",
-    "        return self.cat_normalizer.normalize(cf, hard=True)"
+    "        cf = self.cf.clone().detach() * 1.0\n",
+    "        return cf if self.cat_normalizer is None else self.cat_normalizer.normalize(cf, hard=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
