--- a/nbs/02a_model.ipynb
+++ b/nbs/02a_model.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
-    "from counternet.utils.all import *\n",
+    "from counternet.utils import *\n",
     "from counternet.training_module import BaseModule, PredictiveTrainingModule, CFNetTrainingModule"
    ]
   }
